[package]
name = "worker-demo"
version = "0.1.0"
edition = "2021"
authors = [ "jyasuu <s1002605@pu.edu.tw>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.219"
serde_json = "1.0.140"
url = "2.5.4"
